test/invalid-semantic/58182_undeclared_var/undeclared_var.agu
-- Author: 58182, Gabriel Henriques

let useUndeclared : Int = x + 1